--- a/report.tex
+++ b/report.tex
@@ -135,7 +135,7 @@ Even though the concept of software defined networking dates back to year 2004 \
 
 Most OpenFlow controllers are organized in the same fashion as shown in figure ~\ref{fig:architecture}. Most of the current controllers offer a so-called Northbound interface (usually a REST API) to communicate with applications and to offer them services. The southbound interface is for communicating with the actual physical and virtual switches in the network.
 
-\begin{figure}[h!t]
+\begin{figure}[ht!]
 \centering
 \floatstyle{boxed}
 \includegraphics[width=110mm]{"Controller architecture diagram".jpg}
@@ -187,11 +187,11 @@ Apart from controllers, switches, testing and simulation tools there are many no
 
 There hasn’t been as much talk about security with SDN as there have been on for example network virtualization, but the centralized network control introduces fundamental vulnerabilities that need to be addressed. Roy Chua of SDNCentral.com points out, that the SDN controller should always be closely controlled and also protected from an outside attack like DDOS because without it SDN network's functionality is crippled \cite{CHU2} . Other aspects to be aware of are protecting communication throughout the network and maintaining and monitoring network performance and function. Open Daylight for example includes a component for protection from Denial of Service attacks and OpenFlowSec.org offers multiple security solutions for SDN ranging from malware protection to security policy enforcement.
 
-Other projects aim to enhance the performance of the network. InCntre’s Flowscale is a network load balancer, but the development has stopped after version 0.6. This may be because of many controller applications including load balancer of their own. Both the BIRD by CZ.NIC Labs and CPqD’s RouteFlow offer IP routing.
+Other projects aim to enhance the performance of the network. InCntre’s Flowscale \cite{Flowscale} is a network load balancer, but the development has stopped after version 0.6. This may be because of many controller applications including load balancer of their own. Both the BIRD by CZ.NIC Labs and CPqD’s RouteFlow offer IP routing \cite{Bird, RouteFlow}.
 
-Some components are made to enhance SDN development. These include domain specific languages like Frenetic and Pyretic developed in Princeton University and Haskell based Nettle from Yale university. In same vein FlowForwarding.org offers protocol libraries for NetConf and OpenFlow written in Erlang, Midokura has one for OpenFlow written in Python and Ericsson provides a library made with Node.js. They are named enetconf, of\_protocol, OpenFaucet and Oflib-Node respectively. 
+Some components are made to enhance SDN development. These include domain specific languages like Frenetic and Pyretic developed in Princeton University \cite{Frenetic} and Haskell based Nettle \cite{Nettle} from Yale university. In same vein FlowForwarding.org offers protocol libraries for NetConf and OpenFlow written in Erlang \cite{enetconf,ofproto}, Midokura has one for OpenFlow written in Python \cite{OpenFaucet} and Ericsson provides a library made with Node.js \cite{Node}. They are named enetconf, of\_protocol, OpenFaucet and Oflib-Node respectively. 
 
-Other various project include Big Switch’s Indigo, a hardware abstraction layer and configuration layer meant for communication between floodlight and the physical layer, MirageOS, used for constructing unikernels for network applications, wakame-vdc for data center virtualization and for wireless communication there is nwEPC - EPC SAE Gateway by Thomas Batia and Open Source IMS Core from Fraunhofer Fokus and OpenEPC of which latter is not an open source project but otherwise worth mentioning in this context. 
+Other various project include Big Switch’s Indigo \cite{Indigo}, a hardware abstraction layer and configuration layer meant for communication between floodlight and the physical layer, MirageOS, used for constructing unikernels for network applications, wakame-vdc for data center virtualization and for wireless communication there is nwEPC - EPC SAE Gateway by Thomas Batia and Open Source IMS Core from Fraunhofer Fokus and OpenEPC of which latter is not an open source project but otherwise worth mentioning in this context. 
 
 EU has various research projects under moniker Seventh Framework Programme (FP7) which has produced both research and open source software. Some individual projects in FP7 like FELIX and OFELIA and FIRE research test-beds for use and frameworks for using them (OFELIA). Other projects focus more straightforwardly to OpenFlow. ALIEN project for instance offers an OpenFlow enabling hardware abstraction layer for non-OpenFlow enabled devices and integration with OFELIA whereas OFERTIE aims to improve delivery of real-time interactive applications on the networks. SPARC project aims to enhance standard SDN architecture by splitting the control and forwarding functions by utilizing MPLS.
 
