fixety fix and referency reffing

--- a/references.bib
+++ b/references.bib
@@ -658,6 +658,17 @@
 	urldate = {08-08-2014}
 }
 
+@Other{Mirage,
+	title = {MirageOS},
+	url = {http://www.openmirage.org/},
+	urldate = {08-08-2014}
+}
+
+@Other{wakame,
+	title = {wakame-vdc},
+	url = {https://github.com/axsh/wakame-vdc},
+	urldate = {08-08-2014}
+}
 
 
 
