--- a/references.bib
+++ b/references.bib
@@ -670,7 +670,53 @@
 	urldate = {08-08-2014}
 }
 
+@Other{IMSCORE,
+	title = {Open Source IMS Core}, 
+	url = {http://www.openimscore.org/},
+	urldate = {08-08-2014}
+}
 
+@Other{FP7,
+title = {Seventh Framework Programme}, 
+	url = {http://cordis.europa.eu/home_en.html},
+	urldate = {08-08-2014}
+}
+
+@Other{FELIX,
+title = {FELIX}, 
+	url = {http://www.ict-felix.eu/},
+	urldate = {08-08-2014}
+}
+
+@Other{OFELIA,
+title = {OFELIA}, 
+	url = {http://www.fp7-ofelia.eu/},
+	urldate = {08-08-2014}
+}
+
+@Other{FIRE,
+title = {FIRE}, 
+	url = {http://www.ict-fire.eu/home/fire-projects.html},
+	urldate = {08-08-2014}
+}
+
+@Other{ALIEN,
+title = {ALIEN}, 
+	url = {http://www.fp7-alien.eu/},
+	urldate = {08-08-2014}
+}
+
+@Other{OFERTIE,
+title = {OFERTIE}, 
+	url = {http://www.ofertie.org/},
+	urldate = {08-08-2014}
+}
+
+@Other{SPARC,
+title = {SPARC}, 
+	url = {http://www.fp7-sparc.eu/},
+	urldate = {08-08-2014}
+}
 
 @ARTICLE{FRZ13,
  author = {Feamster, Nick and Rexford, Jennifer and Zegura, Ellen},
