--- a/report.tex
+++ b/report.tex
@@ -191,9 +191,9 @@ Other projects aim to enhance the performance of the network. InCntre’s Flowsc
 
 Some components are made to enhance SDN development. These include domain specific languages like Frenetic and Pyretic developed in Princeton University \cite{Frenetic} and Haskell based Nettle \cite{Nettle} from Yale university. In same vein FlowForwarding.org offers protocol libraries for NetConf and OpenFlow written in Erlang \cite{enetconf,ofproto}, Midokura has one for OpenFlow written in Python \cite{OpenFaucet} and Ericsson provides a library made with Node.js \cite{Node}. They are named enetconf, of\_protocol, OpenFaucet and Oflib-Node respectively. 
 
-Other various project include Big Switch’s Indigo \cite{Indigo}, a hardware abstraction layer and configuration layer meant for communication between floodlight and the physical layer, MirageOS \cite{Mirage}, used for constructing unikernels for network applications, wakame-vdc for data center virtualization \cite{wakame} and for wireless communication there is nwEPC - EPC SAE Gateway by Thomas Batia \cite{nwEPC} and Open Source IMS Core from Fraunhofer Fokus and OpenEPC of which latter is not an open source project but otherwise worth mentioning in this context. 
+Other various project include Big Switch’s Indigo \cite{Indigo}, a hardware abstraction layer and configuration layer meant for communication between floodlight and the physical layer, MirageOS \cite{Mirage}, used for constructing unikernels for network applications, wakame-vdc for data center virtualization \cite{wakame} and for wireless communication there is nwEPC - EPC SAE Gateway by Thomas Batia \cite{nwEPC} and Open Source IMS Core and OpenEPC from Fraunhofer Fokus \cite{IMSCORE, OpenEPC} of which latter is not an open source project but otherwise worth mentioning in this context. 
 
-EU has various research projects under moniker Seventh Framework Programme (FP7) which has produced both research and open source software. Some individual projects in FP7 like FELIX and OFELIA and FIRE research test-beds for use and frameworks for using them (OFELIA). Other projects focus more straightforwardly to OpenFlow. ALIEN project for instance offers an OpenFlow enabling hardware abstraction layer for non-OpenFlow enabled devices and integration with OFELIA whereas OFERTIE aims to improve delivery of real-time interactive applications on the networks. SPARC project aims to enhance standard SDN architecture by splitting the control and forwarding functions by utilizing MPLS.
+EU has various research projects under moniker Seventh Framework Programme (FP7) \cite{FP7} which has produced both research and open source software. Some individual projects in FP7 like FELIX and OFELIA and FIRE research test-beds for use and frameworks for using them (OFELIA) \cite{FELIX, OFELIA, FIRE}. Other projects focus more straightforwardly to OpenFlow. ALIEN project \cite{ALIEN} for instance offers an OpenFlow enabling hardware abstraction layer for non-OpenFlow enabled devices and integration with OFELIA whereas OFERTIE \cite{OFERTIE} aims to improve delivery of real-time interactive applications on the networks. SPARC \cite{SPARC} project aims to enhance standard SDN architecture by splitting the control and forwarding functions by utilizing MPLS.
 
 \clearpage
 
