added openEPC figure

--- a/report.tex
+++ b/report.tex
@@ -315,10 +315,17 @@ OpenEPC comes with different functionalities, which we are going to discuss some
 
 Integration of 3GPP access networks is another functionality of OpenEPC. It incorporates with RAN (Radio Access Network) components, which makes it enable to have control over wireless connectivity of devices to connect them to the testbed. Therefore, it makes the experiments to have realistic radio conditions with complete support of PS (Packet Switch) and partial support of CS (Circuit Switch). Moreover, aside from cost efficient components that are integrated in OpenEPC, it comes with its own radio emulation nodes, which can be engaged in totally virtualized environment. 
 
-OpenEPC has mobility management module along with network ANDSF (Access Network Discovery and Selection Function) on mobile devices, and also takes advantage of location based handovers and radio conditions, which makes the client to choose the suitable access networks in order to prevent packet loss. In addition to above mentioned functionalities, policy and charging control, harmonized AAA and subscriber management, accounting and charging, distribution and user plane realization are other features of OpenEPC. \cite{OpenEPC}
+OpenEPC has mobility management module along with network ANDSF (Access Network Discovery and Selection Function) on mobile devices, and also takes advantage of location based handovers and radio conditions, which makes the client to choose the suitable access networks in order to prevent packet loss. In addition to above mentioned functionalities, policy and charging control, harmonized AAA and subscriber management, accounting and charging, distribution and user plane realization are other features of OpenEPC. 
 
-OpenEPC is highly modular with configurable architecture, which makes it suitable for any research development in field of applications, networks and services. It can simulate different number of deployment scenarios, which varies from core network in a single box, to medium scale distributed testbeds. 
+OpenEPC is highly modular with configurable architecture, which makes it suitable for any research development in field of applications, networks and services. It can simulate different number of deployment scenarios, which varies from core network in a single box, to medium scale distributed testbeds. Figure \ref{fig:OpenEPC} depicts the infrastructure of OpenEPC.  
 
+\begin{figure}[h!t]
+\centering
+\floatstyle{boxed}
+\includegraphics[width=110mm]{"OpenEPC".jpg}
+\caption{OpenEPC Testbed \cite{OpenEPC}}
+\label{fig:OpenEPC}
+\end{figure}
 
 \clearpage
 
