Added SAE figure

--- a/references.bib
+++ b/references.bib
@@ -856,4 +856,12 @@ url = {http://web.archive.org/web/20120622233936/http://www.amitchawre.net/nw-ep
 urldate = {8-08-2014}
 }
 
+@INPROCEEDINGS{SAE, 
+author={Marius Iulian Corici, Fabricio Carvalho de Gouveia, Thomas Magedanz}, 
+booktitle={Wireless Broadband and Ultra Wideband Communications, 2007. AusWireless 2007. The 2nd International Conference on}, 
+title={A Network Controlled QoS Model over the 3GPP System Architecture Evolution}, 
+year={2007}, 
+month={Aug} 
+}
+
 
