--- a/report.tex
+++ b/report.tex
@@ -317,7 +317,7 @@ Integration of 3GPP access networks is another functionality of OpenEPC. It inco
 
 OpenEPC has mobility management module along with network ANDSF (Access Network Discovery and Selection Function) on mobile devices, and also takes advantage of location based handovers and radio conditions, which makes the client to choose the suitable access networks in order to prevent packet loss. In addition to above mentioned functionalities, policy and charging control, harmonized AAA and subscriber management, accounting and charging, distribution and user plane realization are other features of OpenEPC. 
 
-OpenEPC is highly modular with configurable architecture, which makes it suitable for any research development in field of applications, networks and services. It can simulate different number of deployment scenarios, which varies from core network in a single box, to medium scale distributed testbeds. Figure \ref{fig:OpenEPC} depicts the infrastructure of OpenEPC.  
+OpenEPC is highly modular with configurable architecture, which makes it suitable for any research development in field of applications, networks and services. It can simulate different number of deployment scenarios, which varies from core network in a single box, to medium scale distributed testbeds. Figure \ref{fig:OpenEPC} depicts how OpenEPC virtualize real network operator environment.  
 
 \begin{figure}[h!t]
 \centering
@@ -326,6 +326,19 @@ OpenEPC is highly modular with configurable architecture, which makes it suitabl
 \caption{OpenEPC Testbed \cite{OpenEPC}}
 \label{fig:OpenEPC}
 \end{figure}
+
+The nw-EPC is an open source software package, which is implementation of SAE (System Architecture Evolution) gateway. It is written completely in C programming language and runs as single-threaded UNIX process, where data plane and control plane are both running in the same address space. The goal of nw-EPC is to set up a framework, which is implementing LTE SGW (Serving Gateway) and PGW (Packet Data Network Gateway) \cite{nwEPC}. Figure \ref{fig:SAE} illustrates how in SAE, different technologies such as 3GPP WLAN, GPRS, Evolved RAN, and non-3GPP networks are transparently unified \cite{SAE}
+
+The control plane in nw-EPC incorporates the SAE gateway behaviour with the help of expandable FSM framework. This enables nw-EPC node gateway to function as both SAE, and PGW gateways and also other gateway functions, such as WiMAX ASN-GW or GGSN. The data plane in nw-EPC supports IPv4 packet classification, and basic GTP (GPRS Tunneling Protocol)  tunneling/detunneling. However, there is lack of support for IPv6, DPI, QOS, traffic shaping and policing. .   
+
+\begin{figure}[h!t]
+\centering
+\floatstyle{boxed}
+\includegraphics[width=110mm]{"SAE".jpg}
+\caption{System Architecture Evolution \cite{SAE}}
+\label{fig:SAE}
+\end{figure}
+
 
 \clearpage
 
