added SDN comparison table

--- a/references.bib
+++ b/references.bib
@@ -415,6 +415,13 @@
   urldate = {07-08-2014}
 }
 
+@OTHER{RyuTopology,
+  title = {Topology	Discovery	with	Ryu},
+  author = {Kazuya	Okada},
+  url = {http://www.necoma-project.jp/ja/blog/ool-sdn-hackathon14/CloudSDN_Hackathon_20140625_kazuya.pdf},
+  urldate = {11-08-2014}
+}
+
 @OTHER{Trema,
   title = {Trema Controller},
   url = {http://trema.github.io/trema/},
