Added a future developments chapter

--- a/references.bib
+++ b/references.bib
@@ -718,6 +718,30 @@ title = {SPARC},
 	urldate = {08-08-2014}
 }
 
+@Other{Virtex,
+title = {Open Virtex}, 
+	url = {http://ovx.onlab.us/},
+	urldate = {11-08-2014}
+}
+
+@Other{ONOS,
+  title= {ONOS},
+    url {http://onlab.us/tools.html#os},
+    urldate = {11-08-2014}
+}
+
+@online{Projects,
+ title = {OpenDaylight Controller:Project Proposals}, 
+url = {https://wiki.opendaylight.org/view/Project_Proposals:Main}, 
+urldate = {11-08-2014}
+}
+
+@online{SDNCentral,
+ title = {SDNCentral}, 
+url = {http://www.sdncentral.com/}, 
+urldate = {11-08-2014}
+}
+
 @ARTICLE{FRZ13,
  author = {Feamster, Nick and Rexford, Jennifer and Zegura, Ellen},
  title = {The Road to SDN},
