--- a/report.tex
+++ b/report.tex
@@ -171,7 +171,7 @@ and KVM, is included in few Linux kernels and bundled with many SDN projects and
 
 Other software switches include Indigo Virtual Switch meant to be used with Floodlight and Indigo framework \cite{IndigoSwitch}, CPqD’s OFSoftswitch \cite{OfSwitch}, LINC-switch \cite{LINC}, Snabb.co’s virtualized ethernet switch called Snabb Switch \cite{Snabb} and protocol oblivious POFSwitch \cite{POFSwitch}. The previously mentioned open VNet also includes a virtual switch \cite{VNet}. 
 
-Other switch related projects are Centec’s Lantern \cite{Lantern} which includes a modified Open VSwitch but is mainly design for implementing custom  hardware based SDN switches with the accompanying software bundle. Other partly similar software is Pantou \cite{Yia04}. It can be used to turn normal commercial routers to OpenFlow-enabled switches.Pantou will be discussed more in-depth later in the report.
+Other switch related projects are Centec’s Lantern \cite{Lantern} which includes a modified Open VSwitch but is mainly design for implementing custom  hardware based SDN switches with the accompanying software bundle. Other partly similar software is Pantou \cite{Yia04}. It can be used to turn normal commercial routers to OpenFlow-enabled switches. Pantou will be discussed more in-depth later in the report.
 
 \subsection{Testing and Simulating}
 
@@ -191,9 +191,13 @@ Other projects aim to enhance the performance of the network. InCntre’s Flowsc
 
 Some components are made to enhance SDN development. These include domain specific languages like Frenetic and Pyretic developed in Princeton University \cite{Frenetic} and Haskell based Nettle \cite{Nettle} from Yale university. In same vein FlowForwarding.org offers protocol libraries for NetConf and OpenFlow written in Erlang \cite{enetconf,ofproto}, Midokura has one for OpenFlow written in Python \cite{OpenFaucet} and Ericsson provides a library made with Node.js \cite{Node}. They are named enetconf, of\_protocol, OpenFaucet and Oflib-Node respectively. 
 
-Other various project include Big Switch’s Indigo \cite{Indigo}, a hardware abstraction layer and configuration layer meant for communication between floodlight and the physical layer, MirageOS \cite{Mirage}, used for constructing unikernels for network applications, wakame-vdc for data center virtualization \cite{wakame} and for wireless communication there is nwEPC - EPC SAE Gateway by Thomas Batia \cite{nwEPC} and Open Source IMS Core and OpenEPC from Fraunhofer Fokus \cite{IMSCORE, OpenEPC} of which latter is not an open source project but otherwise worth mentioning in this context. 
+Other various project include Big Switch’s Indigo \cite{Indigo}, a hardware abstraction layer and configuration layer meant for communication between floodlight and the physical layer, MirageOS \cite{Mirage}, used for constructing unikernels for network applications, wakame-vdc and Open Virtex for data center virtualization \cite{wakame, Virtex} and for wireless communication there is nwEPC - EPC SAE Gateway by Thomas Batia \cite{nwEPC} and Open Source IMS Core and OpenEPC from Fraunhofer Fokus \cite{IMSCORE, OpenEPC} of which latter is not an open source project but otherwise worth mentioning in this context. 
 
 EU has various research projects under moniker Seventh Framework Programme (FP7) \cite{FP7} which has produced both research and open source software. Some individual projects in FP7 like FELIX and OFELIA and FIRE research test-beds for use and frameworks for using them (OFELIA) \cite{FELIX, OFELIA, FIRE}. Other projects focus more straightforwardly to OpenFlow. ALIEN project \cite{ALIEN} for instance offers an OpenFlow enabling hardware abstraction layer for non-OpenFlow enabled devices and integration with OFELIA whereas OFERTIE \cite{OFERTIE} aims to improve delivery of real-time interactive applications on the networks. SPARC \cite{SPARC} project aims to enhance standard SDN architecture by splitting the control and forwarding functions by utilizing MPLS.
+
+\subsection{Future developments to look forward to}
+
+SDN development seems to be thriving and especially different companies have taken great interest in the concept. Open Daylight, being the biggest company backed SDN project to date, is evolving continuously. During this year as many as 15 new project proposals have been accepted to be included in Open Daylight, among those dedicated Service Function Chaining component, Authentication, Authorization and Accounting component and application policy plugin to name few \cite{projects}. While Floodlight isn't evolving with as rigorous pace, the active development and moderate company involvement is likely to keep Floodlight Open Daylight's main competition. However, the two big controllers might get a new rival in the future. Currently the top trending project in sdncentral.com is On.Lab's upcoming network operating system ONOS \cite{SDNCentral, ONOS}. ONOS is to complete On.Lab's SDN stack consisting of ONOS, FlowVisor and Mininet. It is to feature controller function as well as horizontal co-ordination and communication among multiple ONOS instances allowing easier scalability for networks. The first prototype was demonstrated at year 2013's Open Network Summit and according to On.Lab ONOS will be released this year but no definitive date has been given.
 
 \clearpage
 
