Added a future developments chapter

--- a/references.bib
+++ b/references.bib
@@ -726,7 +726,7 @@ title = {Open Virtex},
 
 @Other{ONOS,
   title= {ONOS},
-    url {http://onlab.us/tools.html#os},
+    url = {http://onlab.us/tools/onos.html},
     urldate = {11-08-2014}
 }
 
