--- a/report.tex
+++ b/report.tex
@@ -195,7 +195,7 @@ Other various project include Big Switch’s Indigo \cite{Indigo}, a hardware ab
 
 EU has various research projects under moniker Seventh Framework Programme (FP7) \cite{FP7} which has produced both research and open source software. Some individual projects in FP7 like FELIX and OFELIA and FIRE research test-beds for use and frameworks for using them (OFELIA) \cite{FELIX, OFELIA, FIRE}. Other projects focus more straightforwardly to OpenFlow. ALIEN project \cite{ALIEN} for instance offers an OpenFlow enabling hardware abstraction layer for non-OpenFlow enabled devices and integration with OFELIA whereas OFERTIE \cite{OFERTIE} aims to improve delivery of real-time interactive applications on the networks. SPARC \cite{SPARC} project aims to enhance standard SDN architecture by splitting the control and forwarding functions by utilizing MPLS.
 
-\subsection{Future developments to look forward to}
+\subsection{Future developments}
 
 SDN development seems to be thriving and especially different companies have taken great interest in the concept. Open Daylight, being the biggest company backed SDN project to date, is evolving continuously. During this year as many as 15 new project proposals have been accepted to be included in Open Daylight, among those dedicated Service Function Chaining component, Authentication, Authorization and Accounting component and application policy plugin to name few \cite{projects}. While Floodlight isn't evolving with as rigorous pace, the active development and moderate company involvement is likely to keep Floodlight Open Daylight's main competition. However, the two big controllers might get a new rival in the future. Currently the top trending project in sdncentral.com is On.Lab's upcoming network operating system ONOS \cite{SDNCentral, ONOS}. ONOS is to complete On.Lab's SDN stack consisting of ONOS, FlowVisor and Mininet. It is to feature controller function as well as horizontal co-ordination and communication among multiple ONOS instances allowing easier scalability for networks. The first prototype was demonstrated at year 2013's Open Network Summit and according to On.Lab ONOS will be released this year but no definitive date has been given.
 
