--- a/report.tex
+++ b/report.tex
@@ -38,7 +38,7 @@
 \date{August 15, 2014}
 \level{Technical Report C-2014-X}
 
-\abstract{Software-Defined Networking (SDN) is a novel solution to network configuration and management. The openness and programmability of SDN stimulate the open source communities and . shown great potential to simplify the existing complex and inflexible network infrastructure. For the design strength, SDN is gaining various investment from both industry and academia in terms of experimental implementation and deployment. In this report, we present. Our focus is on . We discuss the potential research directions and share our perspectives in this domain.}
+\abstract{Software-Defined Networking (SDN) is a novel solution to network configuration and management. Its openness and programmability features have greatly motivated the open source communities where numerous applications and tools are developed for various R\&D purposes. For the strength of SDN, the upcoming 5th Generation mobile networks (5G) can also benefit from the modular and open design to innovate the network architecture and services. In this report, we present a survey of existing open source platforms, applications and tools for SDN and 5G research. We discuss the potential directions and share our perspectives in this domain.}
 
 \keywords{SDN, Open Source, 5G Mobile Networks}
 % \numberofpagesinformation{16 pages + 10 appendix pages}
