updated the controller comparsion table

--- a/report.tex
+++ b/report.tex
@@ -117,7 +117,13 @@ Other lesser known controllers and controller frameworks are for example a very 
 \hline
 \textbf{\shortstack{Compatible \\ OS(s)}}  & \shortstack{Linux \\ Mac \\ Windows} & \shortstack{Linux \\ Android} & \shortstack{Linux \\ Mac \\ Windows} & \shortstack{Linux \\ Mac \\ Windows} & Linux \\
 \hline
+\textbf{Actively Developed} & Yes & Maintained & Yes & Yes & Yes \\ 
+\hline
 \textbf{Open Source} & Yes & Yes & Yes & Yes & Yes \\ 
+\hline
+\textbf{\shortstack{Open Source \\ license}} & GNU & BSD & Apache & EPL & Apache\\
+\hline
+\textbf{Support REST API} & Yes (Limited) & Yes & Yes & Yes & Yes \\
 \hline
 \textbf{\shortstack{Supports \\ OpenStack \\ Quantum}} & No & No & Yes & Yes & Yes \\
 \hline
@@ -133,6 +139,7 @@ Other lesser known controllers and controller frameworks are for example a very 
 
 \end{tabular}       
 \end{sidewaystable}
+
 
 \clearpage
 \subsection{Switches}
