--- a/2-components.tex
+++ b/2-components.tex
@@ -34,15 +34,15 @@ Open Daylight Project \cite{ODL}, or ODL in shorthand, is commonly considered th
 Other lesser known controllers and controller frameworks are for example a very bare bones Libfluid \cite{Libfluid}, Java-based Maestro \cite{Maestro}, On.Lab’s Flowvisor \cite{FlowVisor} which is meant to be used with other On.Lab’s SDN components, FLOWer \cite{Flower} which is written with Erlang, the event-driven Resonance\cite{Resonance}, Node.js -based NodeFlow \cite{Nodeflow}, lesser-known KulCloud Open MUL and SNAC\ cite{MUL, SNAC}, flowforwarding.org’s Warp \cite{Warp}, network virtualization bundle Open VNet \cite{VNet}, IRIS which uses Floodlight and Beacon components to offer horizontal scalability \cite{IRIS} and Juniper’s OpenContrail focusing on SDN and Big Data \cite{Contrail}. Generally these pieces of software are either not in active development or not as well received or otherwise as notable as the controllers mentioned earlier. Table \ref{tab:sdnComparison} shows comparison of some of well known SDN controllers.  
 
 \begin{sidewaystable}[htbf]
-    \caption{SDN Controllers Comparison }
-    \label{tab:sdnComparison}
+   \caption{SDN Controllers Comparison }
+   \label{tab:sdnComparison}
 
 \centering
 \begin{tabular}{|l||c|c|c|c|c|}
 \hline\hline
 \textbf{Name} & \textbf{Pox} & \textbf{Becaon} & \textbf{Floodlight} & \textbf{OpenDaylight} & \textbf{Ryu}  \\
 \hline\hline
-          
+        
 \textbf{Language} & Python & Java & Java,Python & Java & Python \\
 \hline
 \textbf{User Interface} &   \shortstack{ Python + QT4 \\  and Web} & Web & Web and Java & Web & GUI Patch\\
@@ -51,7 +51,13 @@ Other lesser known controllers and controller frameworks are for example a very 
 \hline
 \textbf{\shortstack{Compatible \\ OS(s)}}  & \shortstack{Linux \\ Mac \\ Windows} & \shortstack{Linux \\ Android} & \shortstack{Linux \\ Mac \\ Windows} & \shortstack{Linux \\ Mac \\ Windows} & Linux \\
 \hline
-\textbf{Open Source} & Yes & Yes & Yes & Yes & Yes \\ 
+\textbf{Actively Developed} & Yes & Maintained & Yes & Yes & Yes \\
+\hline
+\textbf{Open Source} & Yes & Yes & Yes & Yes & Yes \\
+\hline
+\textbf{\shortstack{Open Source \\ license}} & GNU & BSD & Apache & EPL & Apache\\
+\hline
+\textbf{Support REST API} & Yes (Limited) & Yes & Yes & Yes & Yes \\
 \hline
 \textbf{\shortstack{Supports \\ OpenStack \\ Quantum}} & No & No & Yes & Yes & Yes \\
 \hline
@@ -65,8 +71,10 @@ Other lesser known controllers and controller frameworks are for example a very 
 \hline
 
 
-\end{tabular}       
+\end{tabular}      
 \end{sidewaystable}
+
+
 
 \clearpage
 \subsection{Switches}
