--- a/2-components.tex
+++ b/2-components.tex
@@ -51,6 +51,8 @@ Other lesser known controllers and controller frameworks are for example a very 
 \hline
 \textbf{\shortstack{Compatible \\ OS(s)}}  & \shortstack{Linux \\ Mac \\ Windows} & \shortstack{Linux \\ Android} & \shortstack{Linux \\ Mac \\ Windows} & \shortstack{Linux \\ Mac \\ Windows} & Linux \\
 \hline
+\textbf{Development Community} & Nicira Networks & \shortstack{David Ericson \\ Stanford University} & \shortstack{Big Switch \\ Networks} & Industry Supported & NTT Communications \\
+\hline
 \textbf{Actively Developed} & Yes & Maintained & Yes & Yes & Yes \\
 \hline
 \textbf{Open Source} & Yes & Yes & Yes & Yes & Yes \\
